Java 8 ready
* fabric loom 1.16
* fabric loader 0.19.2
* Gradle 9.5.0